refactor node start script to move logging params to external file, from where other harnesses can access it...